--- a/Frontend/src/styles/Dashboard.css
+++ b/Frontend/src/styles/Dashboard.css
@@ -25,7 +25,7 @@ body, html {
 }
 
 .sidebar.closed {
-  width: 80px;
+  width: 50px;
   overflow: hidden;
 }
 
@@ -97,7 +97,7 @@ body, html {
   flex: 1;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  /* padding: 20px; */
   background-color: #1f1b24;
 }
 
@@ -109,7 +109,7 @@ body, html {
   background-color: #2a2139;
   padding: 1rem 2rem;
   margin: 0px ;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .top-bar-left {
@@ -181,6 +181,7 @@ body, html {
   font-size: 1rem;
   color: #a9a9a9;
   margin-bottom: 1.5rem;
+  text-align: centre;
 }
 
 .btn {
