--- a/Frontend/src/styles/ExpenseTracker.css
+++ b/Frontend/src/styles/ExpenseTracker.css
@@ -7,12 +7,14 @@
   color: #e0e0e0;
 }
 
-.expense-tracker h2 {
+.ex-st h2 {
   font-size: 1.5rem;
   margin-bottom: 1rem;
-  /* color: #00bfff; */
+  color: #00bfff;
 }
-
+.ex-st{
+  margin: 20px;
+}
 .expense-form {
   display: flex;
   gap: 10px;
